Adding new images of India, adding script for email form, and updates to index page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="events,weddings,parties,celebrations,corporate events, washington, dc, event planning, event planner">
 
 	<title>Swann Planning - DC's Premier Event Planning Firm</title>
-	
+
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/simpletextrotator.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 	<nav class="navbar navbar-custom navbar-transparent navbar-fixed-top one-page" role="navigation">
 
 		<div class="container">
-	
+
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
 					<span class="sr-only">Toggle navigation</span>
@@ -42,10 +42,10 @@
 				</button>
           <a class="navbar-brand" href="index.html"><img class='logo-nav' src="assets/images/logos/swann_logo_small.png"></a>
 			</div>
-	
+
 			<div class="collapse navbar-collapse" id="custom-collapse">
 				<ul class="nav navbar-nav navbar-right">
-	
+
 					<li><a href="#totop">Home</a></li>
 					<li><a href="#about" class="section-scroll">About</a></li>
 					<li><a href="#services" class="section-scroll">Services</a></li>
@@ -56,7 +56,7 @@
 
 				</ul>
 			</div>
-	
+
 		</div>
 
 	</nav>
@@ -340,7 +340,7 @@
               <li class="work-item team-item corporate">
                 <a href="profiles/about.html">
                   <div class="work-image team-image greetings-image">
-                    <img src="./assets/images/swann_profile_photos/headshot_new.jpg" alt="" class="team-image profile-image">
+                    <img src="./assets/images/swann_profile_photos/full_body_with_flower.jpg" alt="India Howard with Flower" class="team-image profile-image">
                   </div>
                   <div class="team-name color-purple strong testimonial-text font-serif large-text">India Howard</div>
                   <div class="team-role large-text testimonial-text font-serif">Founder/CEO</div>
@@ -547,7 +547,8 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<form id="contact-form" class="contact-form" role="form" novalidate="">
+						<form id="contact-form" class="contact-form" role="form" novalidate="" method="POST"
+						action="https://script.google.com/macros/s/AKfycbwWsgpkYdfgvsalFjYGfzyAoICy6QQEiTl71BUbASKeFUpV33A/exec">
 
 							<div class="form-group">
 								<label class="sr-only" for="cname">Name</label>
@@ -600,7 +601,6 @@
             <p>To those who helped <span class="color-purple">transform</span> Swann Planning from conception to existence:</p>
             <p><a href="http://www.jonstrem.com/" target="_blank">Jon Strem</a></p>
             <p><a href="http://www.rdionefoto.com/" target="_blank">R. Dione Foto</a></p>
-            <p><a href="http://www.nosegayflowers.com/" target="_blank">NoseGay Flowers</a></p>
             <p><a href="https://www.instagram.com/glamgal85/" target="_blank">@GlamGal85</a></p>
           </div>
         </div><!-- .row -->
@@ -612,11 +612,11 @@
 		<!-- Widgets start -->
 		<div class="module-small bg-dark">
 			<div class="container">
-	
+
 				<div class="row">
-	
+
 					<div class="col-sm-3">
-	
+
 						<!-- Widget start -->
 						<div class="widget">
 							<h5 class="widget-title font-alt"></h5>
@@ -626,33 +626,33 @@
               <p>Phone: 202.808.2281</p>
             </div>
 						<!-- Widget end -->
-	
+
 					</div>
         </div>
       </div><!-- .row -->
 		</div>
 		<!-- Widgets end -->
-	
+
 		<!-- Divider -->
 		<hr class="divider-d">
 		<!-- Divider -->
-	
+
 		<!-- Footer start -->
 		<footer class="footer bg-dark">
 			<div class="container">
-	
+
 				<div class="row">
-	
+
 					<div class="col-sm-6">
 						<p class="copyright font-alt">© 2016 <a href="index.html">Swann Planning, L.L.C.</a>, All Rights Reserved.</p>
 					</div>
-	
+
 					<div class="col-sm-6">
             <div class="plug pull-right">Designed and Built by <a href="http://www.richardhessler.com/">Richard Hessler</a></div>
 					</div>
-	
+
 				</div>
-	
+
 			</div>
 		</footer>
 	</div>
@@ -660,7 +660,7 @@
 	<div class="scroll-up">
 		<a href="#totop"><i class="fa fa-angle-double-up"></i></a>
 	</div>
-	
+
 	<!-- Javascript files -->
 	<script src="assets/js/jquery-2.1.3.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
