--- a/profiles/about.html
+++ b/profiles/about.html
@@ -88,7 +88,7 @@
           <div class="row">
             <div class="col-sm-offset-2 col-sm-8">
               <div class="portfolio-item">
-                <img class="portfolio-image bio-image" src="../assets/images/swann_profile_photos/headshot_about.jpg" alt="">
+                <img class="portfolio-image bio-image" src="../assets/images/swann_profile_photos/red_dress_front.jpg" alt="India Howard in Red Dress">
                 <div class="portfolio-overlay">
                   <div class="inner-overlay col-xs-8 col-xs-offset-2 text-center">
                     <h1>India R. Howard</h1>
