--- a/index.html
+++ b/index.html
@@ -547,7 +547,39 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<form id="contact-form" class="contact-form" role="form" novalidate="" method="POST"
+						<form id="gform" method="POST" class="pure-form pure-form-stacked"
+						  action="https://script.google.com/macros/s/AKfycbwWsgpkYdfgvsalFjYGfzyAoICy6QQEiTl71BUbASKeFUpV33A/exec">
+						    <!-- change the form action to your script url -->
+
+						    <fieldset class="pure-group">
+						      <label for="name">Name: </label>
+						      <input id="name" name="name" placeholder="What your Mom calls you" />
+						    </fieldset>
+
+						    <fieldset class="pure-group">
+						      <label for="message">Message: </label>
+						      <textarea id="message" name="message" rows="10"
+						      placeholder="Tell us what's on your mind..."></textarea>
+						    </fieldset>
+
+						    <fieldset class="pure-group">
+						      <label for="email"><em>Your</em> Email Address:</label>
+						      <input id="email" name="email" type="email" value=""
+						      required placeholder="your.name@email.com"/>
+						      <span id="email-invalid" style="visibility:hidden">
+						        Must be a valid email address</span>
+						    </fieldset>
+
+						    <fieldset class="pure-group">
+						      <label for="color">Favourite Color: </label>
+						      <input id="color" name="color" placeholder="green" />
+						    </fieldset>
+
+						    <button class="button-success pure-button button-xlarge">
+						      <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+
+						  </form>
+						<form id="gform" method="POST" class="contact-form" method="POST"
 						action="https://script.google.com/macros/s/AKfycbwWsgpkYdfgvsalFjYGfzyAoICy6QQEiTl71BUbASKeFUpV33A/exec">
 
 							<div class="form-group">
