--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<link href="assets/css/animate.css" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/custom.css" rel="stylesheet">
+	<script data-cfasync="false" type="text/javascript"
+  src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 </head>
 <body>
 
@@ -547,69 +549,45 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<form id="gform" method="POST" class="pure-form pure-form-stacked"
-						  action="https://script.google.com/macros/s/AKfycbwWsgpkYdfgvsalFjYGfzyAoICy6QQEiTl71BUbASKeFUpV33A/exec">
-						    <!-- change the form action to your script url -->
-
-						    <fieldset class="pure-group">
-						      <label for="name">Name: </label>
-						      <input id="name" name="name" placeholder="What your Mom calls you" />
-						    </fieldset>
-
-						    <fieldset class="pure-group">
-						      <label for="message">Message: </label>
-						      <textarea id="message" name="message" rows="10"
-						      placeholder="Tell us what's on your mind..."></textarea>
-						    </fieldset>
-
-						    <fieldset class="pure-group">
-						      <label for="email"><em>Your</em> Email Address:</label>
-						      <input id="email" name="email" type="email" value=""
-						      required placeholder="your.name@email.com"/>
-						      <span id="email-invalid" style="visibility:hidden">
-						        Must be a valid email address</span>
-						    </fieldset>
-
-						    <fieldset class="pure-group">
-						      <label for="color">Favourite Color: </label>
-						      <input id="color" name="color" placeholder="green" />
-						    </fieldset>
-
-						    <button class="button-success pure-button button-xlarge">
-						      <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
-
-						  </form>
 						<form id="gform" method="POST" class="contact-form" method="POST"
 						action="https://script.google.com/macros/s/AKfycbwWsgpkYdfgvsalFjYGfzyAoICy6QQEiTl71BUbASKeFUpV33A/exec">
 
 							<div class="form-group">
-								<label class="sr-only" for="cname">Name</label>
-								<input type="text" id="cname" class="form-control" name="cname" placeholder="Name*" required="required" data-validation-required-message="Please enter your name.">
+								<label class="sr-only" for="name">Name</label>
+								<input type="text" id="name" class="form-control" name="name" placeholder="Name*" required="required" data-validation-required-message="Please enter your name.">
 								<p class="help-block text-danger"></p>
 							</div>
 
 							<div class="form-group">
-								<label class="sr-only" for="cemail">Your Email</label>
-								<input type="email" id="cemail" name="cemail" class="form-control" placeholder="Your E-mail*" required="required" data-validation-required-message="Please enter your email address.">
+								<label class="sr-only" for="email">Your Email</label>
+								<input type="email" id="email" name="email" class="form-control" placeholder="Your E-mail*" required="required" data-validation-required-message="Please enter your email address.">
+								<span id="email-invalid" style="visibility:hidden">Must be a valid email address</span>
 								<p class="help-block text-danger"></p>
 							</div>
 
               <div class="form-group">
-                <label class="sr-only" for="cemail">Your Email</label>
-                <input type="phone" id="cnumber" name="cnumber" class="form-control" placeholder="YOUR PHONE NUMBER*" required="required" data-validation-required-message="Please enter your phone number.">
+                <label class="sr-only" for="email">Your Email</label>
+                <input type="phone" id="number" name="number" class="form-control" placeholder="YOUR PHONE NUMBER*" required="required" data-validation-required-message="Please enter your phone number.">
                 <p class="help-block text-danger"></p>
               </div>
 
 							<div class="form-group">
-								<textarea class="form-control" id="cmessage" name="cmessage" rows="7" placeholder="Message*" required="required" data-validation-required-message="Please enter your message."></textarea>
+								<textarea class="form-control" id="message" name="message" rows="7" placeholder="Message*" required="required" data-validation-required-message="Please enter your message."></textarea>
 								<p class="help-block text-danger"></p>
 							</div>
 
 							<div class="text-center">
-								<button type="submit" class="btn btn-block btn-round btn-d">Submit</button>
+								<button type="submit" class="submit-button btn btn-block btn-round btn-d">Submit</button>
 							</div>
 
 						</form>
+
+						<div style="display:none;" id="thankyou_message">
+						    <h2>
+									<em>Thank You</em> for contacting <span class="color-purple">Swann Planning!</span>
+						      I will get back to you soon!
+								</h2>
+					  </div>
 
             <div class="col-sm-8 col-sm-offset-2">
               <img src="assets/images/logos/swann_logo_color.jpg" alt="Swann Planning Color Logo">
@@ -712,6 +690,5 @@
 	<script src="assets/js/owl.carousel.min.js"></script>
 	<script src="assets/js/contact.js"></script>
 	<script src="assets/js/custom.js"></script>
-
 </body>
 </html>
