--- a/index.html
+++ b/index.html
@@ -582,10 +582,9 @@
 
 						</form>
 
-						<div style="display:none;" id="thankyou_message">
+						<div style="display:none; text-align: center;" id="thankyou_message">
 						    <h2>
-									<em>Thank You</em> for contacting <span class="color-purple">Swann Planning!</span>
-						      I will get back to you soon!
+									Thank you for your inquiry. We'll be in touch soon!
 								</h2>
 					  </div>
 
