--- a/profiles/about.html
+++ b/profiles/about.html
@@ -86,11 +86,11 @@
       <section class="module">
         <div class="container">
           <div class="row">
-            <div class="col-sm-offset-2 col-sm-8">
+            <div class="col-md-offset-3 col-sm-7 col-sm-offset-2 col-sm-8">
               <div class="portfolio-item">
                 <img class="portfolio-image bio-image" src="../assets/images/swann_profile_photos/red_dress_front.jpg" alt="India Howard in Red Dress">
-                <div class="portfolio-overlay">
-                  <div class="inner-overlay col-xs-8 col-xs-offset-2 text-center">
+                <div class="portfolio-overlay hidden-sm hidden-xs">
+                  <div class="inner-overlay col-lg-8 col-lg-offset-2 col-xs-12 text-center">
                     <h1>India R. Howard</h1>
                     <p class="description">
                       Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended Howard University and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become the next elite event planner in the District of Columbia.<br/>
@@ -103,6 +103,18 @@
                     </p>
                   </div>
                 </div>
+              </div>
+              <div class="mobile-about visible-xs-block visible-sm-block">
+                <h1>India R. Howard</h1>
+                <p class="description">
+                  Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended Howard University and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become the next elite event planner in the District of Columbia.<br/>
+                </p>
+                <p class="description">
+                  After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, L.L.C., India strives to design events to remember.<br/>
+                </p>
+                <p class="description">
+                  Swann Planning derives from India’s desire and eagerness for people gathering and enjoying themselves. Over the years she has learned that it doesn’t take much to fulfill her desire. Simplicity can always transform into something unique and timeless, and India incorporates this design method into every event.<br/>
+                </p>
               </div>
             </div>
           </div><!-- .row -->
