Updating focus on meetings and less on weddings

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 					<div class="module-subtitle story font-serif">
 						Swann Planning is a full service agency providing design, planning, and production for events in Washington, D.C. and beyond. Swann
-						Planning services cater to weddings, monumental celebrations, and corporate events.<br>
+						Planning services cater to meetings, weddings, and monumental celebrations.<br>
 
 						The belief behind Swann Planning is that an event concept can never be too simple to be transformed into an elegant masterpiece. Placing
 						full attention on every detail, designing an innovative style, and creating a long-lasting memory are key components of a Swann
@@ -148,9 +148,9 @@
 					<div class="col-sm-12">
 						<ul id="filters" class="filter font-alt hidden-xs">
 							<li><a href="#" data-filter="*" class="current wow fadeInUp">All</a></li>
+              <li><a href="#" data-filter=".corporate" class="wow fadeInUp" data-wow-delay="0.6s">Corporate</a></li>
 							<li><a href="#" data-filter=".weddings" class="wow fadeInUp" data-wow-delay="0.2s">Weddings</a></li>
 							<li><a href="#" data-filter=".celebrations" class="wow fadeInUp" data-wow-delay="0.4s">Celebrations</a></li>
-							<li><a href="#" data-filter=".corporate" class="wow fadeInUp" data-wow-delay="0.6s">Corporate</a></li>
 						</ul>
 					</div>
 				</div><!-- .row -->
@@ -158,6 +158,54 @@
 
 			<!-- Portfolio list start -->
 			<ul id="works-grid" class="works-grid works-grid-gut works-grid-3 works-hover-w">
+        <!-- Portfolio item start -->
+        <li class="work-item corporate">
+          <a href="profiles/corporate/holiday.html">
+            <div class="work-image">
+              <img src="assets/images/corporate/corp_retreats.jpg" alt="">
+            </div>
+            <div class="work-caption font-alt">
+              <h3 class="work-title">Holiday Soiree</h3>
+              <div class="work-descr">
+                Corporate
+              </div>
+            </div>
+          </a>
+        </li>
+        <!-- Portfolio item end -->
+
+        <!-- Portfolio item start -->
+        <li class="work-item corporate">
+          <a href="profiles/corporate/meetings.html">
+            <div class="work-image">
+              <img src="assets/images/corporate/corp_annivers_holidays.jpg" alt="">
+            </div>
+            <div class="work-caption font-alt">
+              <h3 class="work-title">Meetings</h3>
+              <div class="work-descr">
+                Corporate
+              </div>
+            </div>
+          </a>
+        </li>
+        <!-- Portfolio item end -->
+
+        <!-- Portfolio item start -->
+        <li class="work-item corporate">
+          <a href="profiles/corporate/corp_celebration.html">
+            <div class="work-image">
+              <img src="assets/images/corporate/corp_celebrations.jpg" alt="">
+            </div>
+            <div class="work-caption font-alt">
+              <h3 class="work-title">Monumental Celebrations</h3>
+              <div class="work-descr">
+                Corporate
+              </div>
+            </div>
+          </a>
+        </li>
+        <!-- Portfolio item end -->
+
 				<!-- Portfolio item start -->
 				<li class="work-item weddings">
 					<a href="profiles/weddings/premier_planning.html">
@@ -252,55 +300,6 @@
           </a>
         </li>
         <!-- Portfolio item end -->
-
-				<!-- Portfolio item start -->
-				<li class="work-item corporate">
-					<a href="profiles/corporate/holiday.html">
-						<div class="work-image">
-							<img src="assets/images/corporate/corp_retreats.jpg" alt="">
-						</div>
-						<div class="work-caption font-alt">
-							<h3 class="work-title">Holiday Soiree</h3>
-							<div class="work-descr">
-								Corporate
-							</div>
-						</div>
-					</a>
-				</li>
-				<!-- Portfolio item end -->
-
-        <!-- Portfolio item start -->
-        <li class="work-item corporate">
-          <a href="profiles/corporate/meetings.html">
-            <div class="work-image">
-              <img src="assets/images/corporate/corp_annivers_holidays.jpg" alt="">
-            </div>
-            <div class="work-caption font-alt">
-              <h3 class="work-title">Meetings</h3>
-              <div class="work-descr">
-                Corporate
-              </div>
-            </div>
-          </a>
-        </li>
-        <!-- Portfolio item end -->
-
-        <!-- Portfolio item start -->
-        <li class="work-item corporate">
-          <a href="profiles/corporate/corp_celebration.html">
-            <div class="work-image">
-              <img src="assets/images/corporate/corp_celebrations.jpg" alt="">
-            </div>
-            <div class="work-caption font-alt">
-              <h3 class="work-title">Monumental Celebrations</h3>
-              <div class="work-descr">
-                Corporate
-              </div>
-            </div>
-          </a>
-        </li>
-        <!-- Portfolio item end -->
-
 			</ul>
 			<!-- Portfolio list end -->
 
